[package]
name = "libafl-playground"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std = []
# Forces a crash
crash = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.0.2" }

[dependencies]
libafl = { path = "./LibAFL/libafl", features = ["default"] }
# libafl = { path = "../../libafl/", features = ["default"] }
libafl_targets = { path = "./LibAFL/libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer", "sancov_cmplog"] }
# TODO Include it only when building cc
libafl_cc = { path = "./LibAFL/libafl_cc/" }
mimalloc = { version = "*", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] } # serialization lib